# cancer-bot

./: .gitignore  README.md  app.py  ingest.py  main.py  pyproject.toml  requirements.txt
Implementation/: __init__.py  answer.py  ingest.py
evaluation/: tests.jsonl
knowledge-base/awareness/: cancer-prevention.md
knowledge-base/prevention/: early-detection.md
knowledge-base/screening/: treatment-options.md
knowledge-base/support/: support-resources.md
knowledge-base/treatment/: cancer-awareness.md
