[project]
name = "cancer-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "gradio>=6.19.0",
    "ipykernel>=7.3.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-openai>=1.3.2",
    "langchain-pinecone>=0.2.13",
    "langchain-text-splitters>=1.1.2",
    # Core
    "python-dotenv>=1.2.1",
    "ipykernel>=7.2.0",
    # Web UI
    "gradio>=6.11.0",
    # LangChain ecosystem
    "langchain>=1.2.17",
    "langchain-core>=1.3.3",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.1",
    "langchain-huggingface>=1.2.2",
    "langchain-chroma>=1.1.0",
    "langgraph>=1.1.10",
    # Vector DB
    "pinecone>=3.0.0",
    "langchain-pinecone>=0.1.0",
    # Embeddings + NLP
    "openai>=2.20.0",
    "tiktoken>=0.12.0",
    "transformers>=5.8.0",
    "torch>=2.11.0",
    # Document loaders / parsing
    "beautifulsoup4>=4.14.3",
    "lxml>=6.1.0",
    "pypdf>=6.11.0",
    "unstructured>=0.22.28",
    "wikipedia>=1.4.0",
    # Utilities
    "scipy>=1.17.1",
    "scraper>=0.1.0",
    "google>=3.0.0",
    "google-generativeai>=0.8.6",
]
