[project]
name = "cancer-bot"
version = "0.1.0"
description = "A RAG-powered cancer awareness assistant chatbot"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "python-dotenv>=1.2.1",
    "gradio>=6.11.0",
    "langchain>=1.2.17",
    "langchain-core>=1.3.3",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.1",
    "langchain-text-splitters>=1.1.0",
    "openai>=2.20.0",
    "tiktoken>=0.12.0",
    "litellm>=1.74.0",
    "pydantic>=2.0.0",
]

[tool.setuptools]
py-modules = ["app"]

[tool.setuptools.packages.find]
include = ["evaluation*", "implementation*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

#required